--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,6 @@
 #Grails Metadata file
-#Wed Jan 02 11:40:09 CET 2013
+#Wed Jan 02 11:54:11 CET 2013
 app.grails.version=2.1.1
 app.name=xke
 app.version=0.1
+plugins.spring-security-core=1.2.7.3
