--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,7 @@
 #Grails Metadata file
 #Wed Jan 02 12:38:36 CET 2013
 app.grails.version=2.1.1
-app.name=xke
+app.name=AppName
 app.version=0.1
 plugins.spring-security-core=1.2.7.3
 plugins.twitter-bootstrap=2.2.2
